@@ -2,6 +2,7 @@
 v6.0.2-git
 ----------
 
+[mms] Save sent-mail when composing in the smartmobile view (Bug #11670).
 [mms] Don't try to save sent-mail to a non-existent sent-mail mailbox.
 [mms] Fix displaying encrypted message in dynamic preview when correct
       passphrase is entered (Bug #11661).
